# generator_tablatura

./: .gitignore  Cargo.toml  README.md  freq_list  mass_mono.sh  ratio
src/: cli.rs  fft.rs  fourier.rs  freq_generator.rs  harmonics.rs  legacy_fourier.rs  main.rs  misc.rs  note_cross_correlation.rs  per_note_fourier.rs  plot.rs  post_processing.rs  really_solid_main.rs  todo  ui.glade
