[package]
name = "generator_tablatura"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustfft = "6.1.0"
wav = "1.0.0"
csv = "1.1"
plotters = "0.3"
fast-float = "0.2"
rand_distr = "0.4.3"
rand_xorshift = "0.3.0"
rand = "0.8.4"
rayon = "1.6.1"
