[package]
name = "generator_tablatura"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustfft = "6.1.0"
wav = "1.0.0"
csv = "1.1"
fast-float = "0.2"
rand_distr = "0.4.3"
rand_xorshift = "0.3.0"
rand = "0.8.4"
rayon = "1.6.1"
num = "0.4"
clap = { version = "4.1.6", features = ["derive"] }
gtk = "0.17.0"
cairo-rs = "0.17.0"
realfft = "3.2.0"

[dependencies.plotters]
git = "https://github.com/plotters-rs/plotters"
default_features = true
features = ["surface_series"]

[dependencies.plotters-cairo]
git = "https://github.com/plotters-rs/plotters-cairo"
